Corrections: Navbar, Cols + Text Alignment.

--- a/css/doggy-styles.css
+++ b/css/doggy-styles.css
@@ -26,6 +26,12 @@ hr {
   background-image: -o-linear-gradient(left, #b6ac9a, #242529, #b6ac9a);
 }
 
+a {
+  font-family: "Amatic SC", cursive;
+  font-size: 1.5rem;
+  font-weight: light;
+}
+
 h1 {
   color: #41444b;
   font-family: "Amatic SC", cursive;
@@ -101,12 +107,16 @@ p {
   height: auto;
   margin-bottom: auto;
   padding-bottom: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 9999;
+}
+.navbar {
+  padding-left: 10%;
+  padding-right: 5%;
 }
 
 .navbar-brand {
@@ -114,7 +124,10 @@ p {
   font-family: "Amatic SC", cursive;
   font-size: 2rem;
   font-weight: bolder;
-  padding: 10px;
+}
+
+.brand {
+  margin-right: 10px;
 }
 
 /** footer  */
@@ -135,9 +148,9 @@ p {
 }
 
 .footer-img {
-  max-height: 3rem;
+  max-height: 9rem;
   position: fixed;
-  bottom: 2.43rem;
+  bottom: -4px;
   right: 10px;
 }
 
@@ -203,7 +216,7 @@ p {
 .product-container {
   margin: auto;
   padding-bottom: 25px;
-  padding-top: 170px;
+  padding-top: 200px;
   text-align: justify;
   margin-top: -120px;
 }
@@ -227,6 +240,7 @@ p {
 .code {
   text-shadow: none;
   margin: auto;
+  min-width: 200px;
   padding: 40px;
   width: 95%;
 }
@@ -360,6 +374,17 @@ img.warning-icon {
   animation: shake 3s;
   animation-iteration-count: infinite;
   width: 10%;
+}
+
+.social-icons {
+  list-style: none;
+}
+
+.sml-icons {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 3.5rem;
 }
 
 @keyframes shake {
@@ -572,7 +597,7 @@ img.button-biscuit {
   align-content: center;
   margin: auto;
   padding-top: 30px;
-  text-align: center;
+  text-align: justify;
   width: 90%;
 }
 
@@ -596,6 +621,7 @@ img.map-frame {
   text-align: center;
   position: absolute;
   left: -5.8rem;
+  text-shadow: none;
   top: 78px;
   width: 227px;
   z-index: 1;
@@ -632,7 +658,8 @@ a:visited {
 /*** Alerts ***/
 
 .alertify-notifier.ajs-bottom {
-  bottom: 2rem;
+  right: 4.5rem;
+  bottom: 5.5rem;
 }
 
 .alertify-notifier .ajs-message.ajs-warning {
